# subcat

./: .eslintrc.js  .gitignore  Cargo.toml  README.md  components.json  config.sample.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
crates/subcat_event/: Cargo.toml  package.json
crates/subcat_event/src/: index.ts  lib.rs
crates/subcat_event/xtask/: Cargo.toml
crates/subcat_event/xtask/src/: main.rs
src/: App.tsx  AppStoreContext.ts  AppStoreProvider.tsx  Content.tsx  Layout.tsx  Preview.tsx  Selector.tsx  ThumbnaiList.tsx  ThumbnailList.tsx  Trash.tsx  index.css  main.rs  main.tsx  store.ts  storeActions.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  model.rs  utils.rs
src/components/: Content.tsx  Preview.tsx  SaveAsModal.tsx  Selector.tsx  ThumbnailList.tsx
src/components/ui/: button.tsx  context-menu.tsx  dialog.tsx  form.tsx  input.tsx  label.tsx  menubar.tsx  select.tsx  separator.tsx  slider.tsx
src/hooks/: index.ts  useAppStore.ts  useAppStoreState.ts  useTauriEventListener.ts
src/lib/: utils.ts
src/types/: index.ts
